--- a/index.html
+++ b/index.html
@@ -6,10 +6,20 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>To-Do List app</title>
 
+
+  <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700" rel="stylesheet">
+
   <link rel="stylesheet" type="text/css" href="resources/css/reset.min.css">
   <link rel="stylesheet" type="text/css" href="resources/css/style.css">
+
 </head>
 <body>
+
+<header>
+    <input type="text" placeholder="Enter an Activity...">
+    <button></button>
+</header>
+
 
 </body>
 </html>
